--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,9 +14,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up our JDK environment # setup JDK environment: mandatory as we need to build  android project
-        uses: actions/setup-java@v1.4.3
+        uses: actions/setup-java@v1
         with:
-          java-version: 1.8
+          java-version: 11
 
       - name: Run Node in VM
         uses: actions/setup-node@master
@@ -42,3 +42,4 @@ jobs:
         env:
           ANDROID_UPLOAD_KEY_ALIAS: cicd
           ANDROID_UPLOAD_PASSWORD: Kv9194
+          JAVA_HOME:
